--- a/ExampleSite/package.json
+++ b/ExampleSite/package.json
@@ -18,5 +18,8 @@
     "postcss": "^8.4.19",
     "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "cssnano": "^5.1.14"
   }
 }
