--- a/ExampleSite/package.json
+++ b/ExampleSite/package.json
@@ -6,20 +6,26 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nixentric/Lowkey-Hugo-Theme.git"
+  },
   "keywords": [
+    "hugo",
     "hugo-themes",
-    "simple-themes",
     "clean-themes"
   ],
   "author": "Nixentric",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/nixentric/Lowkey-Hugo-Theme/issues"
+  },
+  "homepage": "https://github.com/nixentric/Lowkey-Hugo-Theme#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
+    "cssnano": "^5.1.14",
+    "postcss": "^8.4.20",
     "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.2.4"
-  },
-  "dependencies": {
-    "cssnano": "^5.1.14"
   }
 }
