V.1.1.0: Bring back single page on homepage
- Bring back single page on homepage
- Adding abbility to select between single page or list page on the homepage (You can specify it in the ``config/params.toml`` file)

--- a/ExampleSite/config/_default/config.toml
+++ b/ExampleSite/config/_default/config.toml
@@ -5,7 +5,16 @@ theme = 'lowkey'
 title = 'Lowkey Hugo'
 enableRobotsTXT = true
 
-
 # List Config
 summaryLength= 15
-paginate = 5 
+paginate = 5
+
+[markup.highlight]
+      codeFences = false
+      guessSyntax = false
+      hl_Lines = ""
+      lineNoStart = 1
+      lineNos = false
+      lineNumbersInTable = false
+      tabWidth = 4
+      noClasses = false
