feat:support comments

--- a/ExampleSite/config/_default/params.toml
+++ b/ExampleSite/config/_default/params.toml
@@ -7,5 +7,24 @@ description = "Hello"
 # Header Configuration
 avatar = "img/profile-picture.jpg"
 
+# disqus is a comment system. see https://disqus.com
+disqusShortname = ""
+
 [emoji]
 enableEmoji = true
+
+ # giscus is a comment system based on GitHub Discussions. see https://giscus.app
+[giscus]       
+    enable = false
+    repo = ""
+    repoId = ""
+    category = "Announcements"
+    categoryId = ""
+    # mapping = "pathname"  # comment value is the default value
+    # strict = 0
+    # reactionsEnabled = 1
+    # emitMetadata = 0
+    # inputPosition = "top"
+    # theme = "light"
+    # lang = "zh-CN"
+    # lazyLoading = true
