--- a/ExampleSite/package.json
+++ b/ExampleSite/package.json
@@ -1,5 +1,8 @@
 {
   "name": "lowkey",
+  "author": "Nixentric",
+  "homepage": "https://github.com/nixentric/Lowkey-Hugo-Theme#readme",
+  "license": "MIT",
   "version": "1.1.0",
   "description": "A Clean and Simple Hugo theme inspired by Adam Wathan's (https://adamwathan.me/) Website.",
   "main": "index.js",
@@ -10,22 +13,15 @@
     "type": "git",
     "url": "git+https://github.com/nixentric/Lowkey-Hugo-Theme.git"
   },
-  "keywords": [
-    "hugo",
-    "hugo-themes",
-    "clean-themes"
-  ],
-  "author": "Nixentric",
-  "license": "MIT",
+  "keywords": ["hugo", "hugo-themes", "clean-themes"],
   "bugs": {
     "url": "https://github.com/nixentric/Lowkey-Hugo-Theme/issues"
   },
-  "homepage": "https://github.com/nixentric/Lowkey-Hugo-Theme#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "cssnano": "^5.1.14",
-    "postcss": "^8.4.20",
+    "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "@fullhuman/postcss-purgecss": "^5.0.0"
   }
 }
