try to answer issues or question in lowkey themes

--- a/ExampleSite/config/_default/params.toml
+++ b/ExampleSite/config/_default/params.toml
@@ -7,6 +7,9 @@ description = "Hello"
 # Header Configuration
 avatar = "img/profile-picture.jpg"
 
+#favicon
+favicon = "icons/favicon.ico"
+
 # disqus is a comment system. see https://disqus.com
 disqusShortname = ""
 
