--- a/ExampleSite/config/_default/hugo.toml
+++ b/ExampleSite/config/_default/hugo.toml
@@ -2,7 +2,7 @@ baseURL = 'http://example.org/'
 copyright = "{year}" # To make 2007 - 2022. Just add before {year} example: 2007 - {year}
 languageCode = 'en-US'
 defaultContentLanguage = 'en'
-theme = 'lowkey'
+theme = 'enchanted-lowkey'
 title = 'Enhanced Lowkey Hugo'
 enableRobotsTXT = true
 summaryLength = 15
